Second_Step/data/extract_data_vpl/43/12/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
IntegerProfile.java:38: error: illegal start of expression
            }
            ^
IntegerProfile.java:41: error: reached end of file while parsing
}
 ^
2 errors
Not compiled
--|>
Grade :=>>0.00000
